# cmake_sample

./: .gitignore  CMakeLists.txt
include/: good_morning.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
